--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -66,6 +66,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>demo</finalName>
 	</build>
 
 </project>
